--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.15",
     "expo": "~48.0.18",
+    "expo-notifications": "^0.18.1",
+    "expo-permissions": "^14.1.1",
     "expo-status-bar": "~1.4.4",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.8"
   },
